removed hamcrest
also minor improvements and upped assertj